--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -23,7 +23,7 @@
 <!-- Barra -->
 <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
   <!-- Foto  -->
-  <img src="img/Familia.jpeg" " style="width:100%">
+  <img src="Familia.jpeg" " style="width:100%">
   <a href="#" class="w3-bar-item w3-button w3-padding-large w3-black">
     <i class="fa fa-home w3-xxlarge"></i>
     <p>Início</p>
@@ -58,7 +58,7 @@
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">Eu sou</span> Pablo.</h1>
     <p>Administrador e Desenvolvedor de Sistemas.</p>
-    <img src= "img/Familia1.jpeg" alt="boy" class="w3-image" width="992" height="1108">
+    <img src= "Familia1.jpeg" alt="boy" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- Sobre -->
